fix(hubert): Make dialogs full-height on iOS (use 100dvh)
Fixes #127

--- a/packages/hubert/src/drawer/Drawer.module.scss
+++ b/packages/hubert/src/drawer/Drawer.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   padding: 0;
   height: 100vh;
-  height: -webkit-fill-available;
+  height: 100dvh;
   width: 100vw;
   z-index: 15000;
   background: rgb(var(--lotta-box-background-color));
